--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,5 @@ cn2an==0.5.22
 jieba==0.42.1
 gradio==3.48.0
 langid==1.1.6
+git+https://github.com/hindev9th/vi_clear.git@main
+git+https://github.com/hindev9th/MeloTTS.git@main
