--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ librosa==0.9.1
 faster-whisper==0.9.0
 pydub==0.25.1
 wavmark==0.0.3
-numpy==1.22.0
+numpy==1.24.3
 eng_to_ipa==0.0.2
 inflect==7.0.0
 unidecode==1.3.7
@@ -14,5 +14,5 @@ cn2an==0.5.22
 jieba==0.42.1
 gradio==3.50.2
 langid==1.1.6
-git+https://github.com/hindev9th/vi_clear.git@main
-git+https://github.com/hindev9th/MeloTTS.git@main
+# git+https://github.com/hindev9th/vi_clear.git@main
+# git+https://github.com/hindev9th/MeloTTS.git@main
